# uniqsketch

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  THIRD-PARTY-LICENSES
include/: ClusterUtil.hpp  CompareSketchUtil.hpp  FileUtil.hpp  QuerySketchUtil.hpp  SequenceUtil.hpp  TestUtil.hpp  UniqSketchUtil.hpp
src/: comparesketch.cpp  querysketch.cpp  uniqsketch.cpp
test/: bloomfiltertest.cpp  comparesketchtest.cpp  expected_out_uniqsketch.txt  querysketchtest.cpp  uniqsketchtest.cpp
